# amazon-marketplace-sync-hub

./: .env.example  .gitignore  CODEX.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages-health.yml  sync.yml
app/: __init__.py  cli.py  config.py  db.py  main.py  models.py  services.py
app/connectors/: __init__.py  amazon.py  qoo10.py  shopee.py
app/static/: index.html
docs/: api-research.md  architecture.md  setup.md
scripts/: build_pages.py
tests/: test_app.py  test_pricing.py
